fix report assignment

--- a/Ass01-BuildLinuxKernel/Report/SubTex/bia_tai_lieu.tex
+++ b/Ass01-BuildLinuxKernel/Report/SubTex/bia_tai_lieu.tex
@@ -3,10 +3,10 @@
   \draw[line width = 3pt,color=blue] ($(current page.north west) + (2.2cm,-2.2cm)$) rectangle ($(current page.south east) + (-2.2cm,2.2cm)$);
    \draw[line width = 2pt,color=green] ($(current page.north west) + (2cm,-2cm)$) rectangle ($(current page.south east) + (-2cm,2cm)$);
 \end{tikzpicture}
-\vspace{0cm}
+\vspace{1.5cm}
 \begin{center} \large
-TRƯỜNG ĐẠI HỌC BÁCH KHOA TP HCM \\
-\textbf{KHOA KHOA HỌC VÀ KỸ THUẬT MÁY TÍNH } \\
+HCMC University Of Technology \\
+\textbf{Faculty of Computer Science \& Engineering} \\
 - - - - - - - - - - - -
 \end{center}
 
@@ -23,14 +23,11 @@ TRƯỜNG ĐẠI HỌC BÁCH KHOA TP HCM \\
 
 \begin{center}
 \begin{tabular}{c}
-\multicolumn{1}{c}{\textbf{{\huge KỸ NĂNG CHUYÊN NGHIỆP CHO KỸ SƯ}}}\\
+\multicolumn{1}{c}{\textbf{{\huge OPERATING SYSTEMS}}}\\
 ~~\\
 \hline
 \\ \\
-\multicolumn{1}{c}{\textbf{{\Large Báo cáo Bài tập nhóm}}}\\
-\\
-\textbf{{\Huge Đề xuất các giải pháp}} \\
-\textbf{{\Huge về vấn đề trạm chờ xe buýt}} \\
+\textbf{{\Huge Assignment \#1 - System Call}} \\
 \\ \\
 \hline
 \end{tabular}
@@ -38,20 +35,16 @@ TRƯỜNG ĐẠI HỌC BÁCH KHOA TP HCM \\
 
 \begin{table}[h]
 \begin{tabular}{rrlrr}
-\hspace{5cm} 
-& Giáo viên hướng dẫn: & TS. Nguyễn Cao Trí & & \\ 
-& Sinh viên thực hiện: & 1612212 - Nguyễn Trọng Nghĩa \\
-&  & 1613535 - Nguyễn Văn Tiến\\
-&  & 1610852 - Huỳnh Sâm Hà\\
-&  & 1613575 - Trần Ngọc Tín\\
-&  & 1612806 - Huỳnh Song Anh Quân\\
+\hspace{7cm} 
+& Instructor: & Nguyen Minh Tri & & \\ 
+& Student: & 160852 - Huynh Sam Ha \\
 \end{tabular}
 \end{table}
 
-\vspace{2cm}
+\vspace{3cm}
 
 \begin{center}
-{\footnotesize Tp. Hồ Chí Minh, Tháng 1/2018}
+{\footnotesize Ho Chi Minh City, 3/2018}
 \end{center}
 
 \end{titlepage}
