--- a/Ass01-BuildLinuxKernel/Report/Technical Report.tex
+++ b/Ass01-BuildLinuxKernel/Report/Technical Report.tex
@@ -8,7 +8,7 @@
 %\usepackage{times} %set font Times New Roman
 \renewcommand{\familydefault}{\sfdefault} %set font Sans Serif
 
-%\usepackage[english,vietnam]{babel}
+\usepackage[english,vietnam]{babel}
 %\usepackage[utf8]{inputenc}
 %\usepackage[francais]{babel}
 
@@ -117,7 +117,8 @@
 \fancyhead[L]{
 	\begin{tabular}{rl}
 		\begin{tabular}{l}
-			\textbf{\bf Trường ĐH Bách Khoa TP. HCM -- Khoa Khoa học và Kỹ thuật Máy tính}\\
+			\textbf{\bf HCMC University Of Technology - 
+				Faculty of Computer Science \& Engineering}\\
 		\end{tabular} 	
 	\end{tabular}
 }
@@ -127,8 +128,8 @@
 		\tiny \bf 
 \end{tabular}  }
 \fancyfoot{} % clear all footer fields
-\fancyfoot[L]{\footnotesize Báo cáo Bài tập nhóm môn Kỹ năng chuyên nghiệp cho kỹ sư}
-\fancyfoot[R]{\footnotesize Trang {\thepage}/\pageref{LastPage}}
+\fancyfoot[L]{\footnotesize Operating Systems - Assignment \#1-System Call}
+\fancyfoot[R]{\footnotesize Page {\thepage}/\pageref{LastPage}}
 \renewcommand{\headrulewidth}{0.1pt}
 \renewcommand{\footrulewidth}{0.1pt}
 
