fix update assignemnt

--- a/Ass01-BuildLinuxKernel/Report/Report.tex
+++ b/Ass01-BuildLinuxKernel/Report/Report.tex
@@ -130,7 +130,7 @@
 \end{tabular}  }
 \fancyfoot{} % clear all footer fields
 \fancyfoot[L]{\footnotesize Operating Systems - Assignment \#1-System Call}
-\fancyfoot[R]{\footnotesize Page {\thepage}/\pageref{LastPage}}
+\fancyfoot[R]{\footnotesize Trang {\thepage}/\pageref{LastPage}}
 \renewcommand{\headrulewidth}{0.1pt}
 \renewcommand{\footrulewidth}{0.1pt}
 
@@ -186,9 +186,19 @@
 \addcontentsline{toc}{section}{Tài liệu tham khảo}
 \begin{thebibliography}{99999}
 	
-\bibitem[Network]{} {kernel-package: \url{http://man.he.net/man5/kernel-package}}
+\bibitem[medium.freecodecamp.org]{medium.freecodecamp.org} {
+\href{https://medium.freecodecamp.org/building-and-installing-the-latest-linux-kernel-from-source-6d8df5345980}{How to build and install the latest Linux kernel from source?}}
+	
+\bibitem[man.he.net]{man.he.net} {
+	\href{http://man.he.net/man5/kernel-package}{Document about kernel-package}}
 
-\bibitem[Network]{} {\url{https://www.cs.swarthmore.edu/~newhall/unixhelp/howto_C_libraries.html}}
+\bibitem[cs.swarthmore.edu]{cs.swarthmore.edu} {
+	\href{https://www.cs.swarthmore.edu/~newhall/unixhelp/howto_C_libraries.html}{Libraries in C}}
+
+
+\bibitem[kernel.org]{kernel.org} {
+	\href{https://www.kernel.org/doc/html/v4.12/process/adding-syscalls.html#x86-system-call-implementation}{Adding a New System Call - Compatibility System Calls}}
+
 
 \end{thebibliography}
 
