--- a/Ass01-BuildLinuxKernel/Report/SubTex/bia_tai_lieu.tex
+++ b/Ass01-BuildLinuxKernel/Report/SubTex/bia_tai_lieu.tex
@@ -45,7 +45,7 @@
 \vspace{3cm}
 
 \begin{center}
-{\footnotesize Ho Chi Minh City, 3/2018}
+{\footnotesize Thành phố Hồ Chí Minh, 3/2018}
 \end{center}
 
 \end{titlepage}
